mostra cidade ao escolher clube

--- a/src/app/sumula-visualizacao/sumula-visualizacao.component.html
+++ b/src/app/sumula-visualizacao/sumula-visualizacao.component.html
@@ -18,7 +18,7 @@
                 </div>    
                 <div class="col-sm-6">
                     <label class="control-label">Local da Partida</label>
-                    <p>{{sumula.local}}</p>
+                    <p>{{sumula.local}} - {{endereco.localidade}}/{{endereco.uf}}</p>
                 </div>          
             </div>
         </div>
