--- a/src/app/sumula-cadastro/sumula-cadastro.component.html
+++ b/src/app/sumula-cadastro/sumula-cadastro.component.html
@@ -43,7 +43,7 @@
 
                 <div class="col-sm-6">
                     <label class="control-label">Local da Partida</label>
-                    <p>{{sumula.local}}</p>
+                    <p>{{sumula.local}} - {{endereco.localidade}}/{{endereco.uf}}</p>
                 </div>
             </div>
 
