--- a/src/app/atleta/atleta.component.html
+++ b/src/app/atleta/atleta.component.html
@@ -5,27 +5,29 @@
     <p class="texto_titulo_tabela">
         Atletas cadastrados:
     </p>
-    <table class="table">
-        <thead>
-            <tr>
-                <th scope="col">Nome</th>
-                <th scope="col">CPF</th>
-                <th scope="col">BID</th>
-                <th scope="col">Clube</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let atleta of atletas">
-                <td>
-                    <a routerLink="/atleta-cadastro/{{atleta.id}}">
-                        {{atleta.nome}}
-                    </a>
-                </td>
-                <td>{{atleta.cpf}}</td>
-                <td>{{atleta.bid}}</td>
-                <td>{{atleta.clube}}</td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="table-responsive">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th scope="col">Nome</th>
+                    <th scope="col">CPF</th>
+                    <th scope="col">BID</th>
+                    <th scope="col">Clube</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let atleta of atletas">
+                    <td>
+                        <a routerLink="/atleta-cadastro/{{atleta.id}}">
+                            {{atleta.nome}}
+                        </a>
+                    </td>
+                    <td>{{atleta.cpf}}</td>
+                    <td>{{atleta.bid}}</td>
+                    <td>{{atleta.clube}}</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </section>
 
