--- a/src/app/clube/clube.component.html
+++ b/src/app/clube/clube.component.html
@@ -5,26 +5,28 @@
     <p class="texto_titulo_tabela">
         Clubes cadastrados:
     </p>
-    <table class="table">
-        <thead>
-            <tr>
-                <th scope="col">Nome</th>
-                <th scope="col">Estádio</th>
-                <th scope="col">CEP</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let clube of clubes">
-                <td>
-                    <a routerLink="/clube-cadastro/{{clube.id}}">
-                        {{clube.nome}}
-                    </a>
-                </td>
-                <td>{{clube.estadio}}</td>
-                <td>{{clube.cep}}</td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="table-responsive">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th scope="col">Nome</th>
+                    <th scope="col">Estádio</th>
+                    <th scope="col">CEP</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let clube of clubes">
+                    <td>
+                        <a routerLink="/clube-cadastro/{{clube.id}}">
+                            {{clube.nome}}
+                        </a>
+                    </td>
+                    <td>{{clube.estadio}}</td>
+                    <td>{{clube.cep}}</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </section>
     
     
