--- a/src/app/sumula/sumula.component.html
+++ b/src/app/sumula/sumula.component.html
@@ -5,25 +5,27 @@
     <p class="texto_titulo_tabela">
         Súmulas finalizadas:
     </p>
-    <table class="table">
-        <thead>
-            <tr>
-                <th scope="col">Data</th>
-                <th scope="col">Mandante</th>
-                <th scope="col">Visitante</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let sumula of sumulas">
-                <td>
-                    <a routerLink="/sumula-visualizacao/{{sumula.id}}">
-                        {{mascaraDataHora(sumula.data)}}
-                    </a>
-                </td>
-                <td>{{sumula.clubeMandante.nome}}</td>
-                <td>{{sumula.clubeVisitante.nome}}</td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="table-responsive">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th scope="col">Data</th>
+                    <th scope="col">Mandante</th>
+                    <th scope="col">Visitante</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let sumula of sumulas">
+                    <td>
+                        <a routerLink="/sumula-visualizacao/{{sumula.id}}">
+                            {{mascaraDataHora(sumula.data)}}
+                        </a>
+                    </td>
+                    <td>{{sumula.clubeMandante.nome}}</td>
+                    <td>{{sumula.clubeVisitante.nome}}</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </section>
 
